--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
 
     <groupId>org.neo4j.example</groupId>
     <artifactId>stackoverflow-import</artifactId>
-    <version>2.3.0-M03</version>
+    <version>0.1-SNAPSHOT</version>
 
     <dependencies>
-        <dependency>
+        <!--dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j</artifactId>
             <version>${project.version}</version>
@@ -18,7 +18,7 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-compress</artifactId>
             <version>1.0</version>
-        </dependency>
+        </dependency-->
         <dependency>
             <groupId>net.sf.opencsv</groupId>
             <artifactId>opencsv</artifactId>
